--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       <section class="left_section_wrapper">
         <aside class="left">
           <div class="left_navigation_fixed">
-            <div class="avatar_wrapper"></div>
+            <div class="avatar_wrapper">
+              <a href="#about"><img src="./assets/img/avatar.jpg" alt="" /></a>
+            </div>
             <div class="nav_wrapper">
               <nav>
                 <ul>
