--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <div class="left_footer">
               <div class="social">
-                <p>SOCIAL</p>
+                <p class="social_hidden">SOCIAL</p>
                 <div class="hr_line"></div>
                 <div class="social_icons">
                   <a href="https://www.facebook.com/GurGoo/"
