--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="avatar_wrapper">
               <a href="#about"><img src="./assets/img/avatar.jpg" alt="" /></a>
             </div>
-            <div class="nav_wrapper">
+            <div class="nav_wrapper nav_mob_wrapper">
               <nav>
                 <ul>
                   <li>
@@ -68,6 +68,11 @@
                   <a href=""><i class="fa-brands fa-instagram"></i></a>
                   <a href=""> <i class="fa-brands fa-youtube"></i></a>
                 </div>
+              </div>
+              <div class="menu_wrapper hidden">
+                <button class="menu_btn">
+                  <i class="fa-solid fa-bars"></i>
+                </button>
               </div>
             </div>
           </div>
