--- a/index.html
+++ b/index.html
@@ -62,11 +62,17 @@
                 <p class="social_hidden">SOCIAL</p>
                 <div class="hr_line"></div>
                 <div class="social_icons">
-                  <a href="https://www.facebook.com/GurGoo/"
+                  <a href="https://www.facebook.com/GurGoo/" target="_blank"
                     ><i class="fa-brands fa-facebook"></i
                   ></a>
-                  <a href=""><i class="fa-brands fa-instagram"></i></a>
-                  <a href=""> <i class="fa-brands fa-youtube"></i></a>
+                  <a
+                    href="https://www.instagram.com/georgeneligan/"
+                    target="_blank"
+                    ><i class="fa-brands fa-instagram"></i
+                  ></a>
+                  <a href="https://github.com/georgeneligan" target="_blank">
+                    <i class="fa-brands fa-github"></i
+                  ></a>
                 </div>
               </div>
               <div class="menu_wrapper hidden">
