--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <aside class="left">
           <div class="left_navigation_fixed">
             <div class="avatar_wrapper">
-              <a href="#about"><img src="./assets/img/avatar.jpg" alt="" /></a>
+              <a href="#about"
+                ><img src="./assets/img/avatarprimary.png" alt=""
+              /></a>
             </div>
             <div class="nav_wrapper nav_mob_wrapper">
               <nav>
